# openapi.yaml
@@ -4,7 +4,7 @@ info:
   description: A plugin that allows the user to manage daily expenses using ChatGPT. If you do not know the user's username, ask them first before making queries to the plugin. Otherwise, use the username "global".
   version: 'v1'
 servers:
-  - url: http://localhost:5003
+  - url: https://w16et2-5003.csb.app/
 paths:
   /expenses/{username}:
     get:
@@ -62,6 +62,25 @@ paths:
       responses:
         "200":
           description: OK
+  /expenses/{username}/pie_chart:
+    get:
+      operationId: getPieChart
+      summary: Get a pie chart of expenses by category
+      parameters:
+      - in: path
+        name: username
+        schema:
+            type: string
+        required: true
+        description: The name of the user.
+      responses:
+        "200":
+          description: OK
+          content:
+            image/png:
+              schema:
+                type: string
+                format: binary
 
 components:
   schemas:
